# groundswell_indicators

./: .gitignore  LICENSE  README.md
accessibility/: README.md  SPEC.md  access_indicators.qmd  access_indicators_colab.ipynb  access_indicators_dq.R  pyproject.toml
accessibility/data/: readme.md
accessibility/data/processed/bluespace/: bluespace_all.parquet  readme.md
accessibility/data/processed/oproads/: readme.md
accessibility/data/processed/osgsl/: osgsl_all.parquet  osgsl_district.parquet  osgsl_doorstop.parquet  osgsl_local.parquet  osgsl_neighbourhood.parquet  osgsl_subregional.parquet  osgsl_wider.parquet
accessibility/data/raw/osgsl/: osgsl.parquet  readme.md
accessibility/scripts/: gs_all_routing.py
accessibility/ukroutes/: .RData  .Rhistory  check_outputs.R  preprocessing.py  process_input_bluesp.R  process_input_files.R  process_input_greensp.R  process_input_toids.R  process_routing.py  readme.md  routing.py
accessibility/ukroutes/.Rproj.user/2551CBB9/pcs/: files-pane.pper  windowlayoutstate.pper
accessibility/ukroutes/.Rproj.user/2551CBB9/sources/prop/: 15311F12  256AA141  5E4348E9  C207ABB5  INDEX
accessibility/ukroutes/.Rproj.user/2551CBB9/sources/session-54ff6ac4/: 4548953A  F99DA356  F99DA356-contents
accessibility/ukroutes/.Rproj.user/2551CBB9/sources/session-57d0895a/: 4548953A  F99DA356
accessibility/ukroutes/.Rproj.user/2551CBB9/sources/session-e1f80a46/: 29FC860A  951ECA3C  951ECA3C-contents  B28B03CA  B28B03CA-contents
accessibility/ukroutes/.Rproj.user/shared/notebooks/: paths
accessibility/ukroutes/common/: utils.py
(+21 files in other folders)
